--- a/EC.Framework.Host/EC.Framework.Host.csproj
+++ b/EC.Framework.Host/EC.Framework.Host.csproj
@@ -5,8 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="4.4.0" />
     <PackageReference Include="Volo.Abp.Autofac" Version="4.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EC.Framework.EntityFrameworkCore\EC.Framework.EntityFrameworkCore.csproj" />
   </ItemGroup>
 
 </Project>
