--- a/EC.Framework.Host/appsettings.Development.json
+++ b/EC.Framework.Host/appsettings.Development.json
@@ -6,5 +6,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Port=5432;Database=Framework_Light;User ID=postgres;Password=123456;"
   }
 }
