--- a/EC.Framework.Host/appsettings.json
+++ b/EC.Framework.Host/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Port=5432;Database=Framework_Light;User ID=postgres;Password=123456;"
+  }
 }
