--- a/EC.Framework.EntityFrameworkCore/EC.Framework.EntityFrameworkCore.csproj
+++ b/EC.Framework.EntityFrameworkCore/EC.Framework.EntityFrameworkCore.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="4.4.0" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.PostgreSql" Version="4.4.0" />
+    <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="4.4.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="4.4.0" />
   </ItemGroup>
 
   <ItemGroup>
