--- a/EC.Framework.Host/EC.Framework.Host.csproj
+++ b/EC.Framework.Host/EC.Framework.Host.csproj
@@ -9,8 +9,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="4.4.0" />
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="4.4.0" />
     <PackageReference Include="Volo.Abp.Autofac" Version="4.4.0" />
+    <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.4.0" />
   </ItemGroup>
 
   <ItemGroup>
